--- a/Client/_Imports.razor
+++ b/Client/_Imports.razor
@@ -8,3 +8,8 @@
 @using Microsoft.JSInterop
 @using Learning.Client
 @using Learning.Client.Shared
+@using MudBlazor
+@using MudBlazor.Dialog
+@using Syncfusion.Blazor.RichTextEditor
+@using Blazored.Video
+@using Blazored.Video.Support
