added list slide deck page

--- a/Client/Pages/Counter.razor
+++ b/Client/Pages/Counter.razor
@@ -5,7 +5,53 @@
 <p>Current count: @currentCount</p>
 
 <button class="btn btn-primary" @onclick="IncrementCount">Click me</button>
+<MudGrid>
+    <MudItem xs="12">
+        <MudPaper>xs=12</MudPaper>
+    </MudItem>
+    <MudItem xs="12" sm="6">
+        <MudPaper>xs=12 sm=6</MudPaper>
+    </MudItem>
+    <MudItem xs="12" md="6">
+        <MudPaper>xs=12 md=6</MudPaper>
+    </MudItem>
+    <MudItem xs="6" sm="3">
+        <MudPaper>xs=6 sm=3</MudPaper>
+    </MudItem>
+    <MudItem xs="6" sm="3">
+        <MudPaper>xs=6 sm=3</MudPaper>
+    </MudItem>
+    <MudItem xs="6" sm="3">
+        <MudPaper>xs=6 sm=3</MudPaper>
+    </MudItem>
+    <MudItem xs="6" sm="3">
+        <MudPaper>xs=6 sm=3</MudPaper>
+    </MudItem>
+</MudGrid>
 
+<MudGrid>
+    <MudItem xs="12">
+        <MudPaper>xs=12</MudPaper>
+    </MudItem>
+    <MudItem xs="12" sm="6">
+        <MudPaper>xs=12 sm=6</MudPaper>
+    </MudItem>
+    <MudItem xs="12" sm="6">
+        <MudPaper>xs=12 sm=6</MudPaper>
+    </MudItem>
+    <MudItem xs="6" sm="3">
+        <MudPaper>xs=6 sm=3</MudPaper>
+    </MudItem>
+    <MudItem xs="6" sm="3">
+        <MudPaper>xs=6 sm=3</MudPaper>
+    </MudItem>
+    <MudItem xs="6" sm="6">
+        <MudPaper>xs=6 sm=6</MudPaper>
+    </MudItem>
+    <MudItem xs="4" sm="7">
+        <MudPaper>xs=4 sm=7</MudPaper>
+    </MudItem>
+</MudGrid>
 @code {
     private int currentCount = 0;
 
