--- a/Client/Shared/NavMenu.razor
+++ b/Client/Shared/NavMenu.razor
@@ -27,6 +27,11 @@
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Add SlideDeck
             </NavLink>
         </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="listAllSlideDecksPage">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> List all SlideDecks
+            </NavLink>
+        </li>
     </ul>
 </div>
 
