EditSlideDeck component added

--- a/Client/Components/EditSlide.razor
+++ b/Client/Components/EditSlide.razor
@@ -1,6 +1,6 @@
 ﻿@using Learning.Shared.DbModels
 @using Syncfusion.Blazor.RichTextEditor
-<MudPaper Elevation="3" Class="pa-2 mx-2">
+<MudPaper Elevation="3">
     @*<MudText Typo="Typo.h6">Page: (@Index)</MudText>*@
     <MudText Typo="Typo.subtitle1">Description</MudText>
     <SfRichTextEditor @bind-Value="Slide.TextContent">
