--- a/Client/Pages/Counter.razor
+++ b/Client/Pages/Counter.razor
@@ -6,50 +6,23 @@
 
 <button class="btn btn-primary" @onclick="IncrementCount">Click me</button>
 <MudGrid>
-    <MudItem xs="12">
-        <MudPaper>xs=12</MudPaper>
+    <MudItem xs="1">
+        <MudPaper>xs=1</MudPaper>
     </MudItem>
-    <MudItem xs="12" sm="6">
-        <MudPaper>xs=12 sm=6</MudPaper>
+    <MudItem xs="2">
+        <MudPaper>xs=2</MudPaper>
     </MudItem>
-    <MudItem xs="12" md="6">
-        <MudPaper>xs=12 md=6</MudPaper>
+    <MudItem xs="3">
+        <MudPaper>xs=3</MudPaper>
     </MudItem>
-    <MudItem xs="6" sm="3">
-        <MudPaper>xs=6 sm=3</MudPaper>
-    </MudItem>
-    <MudItem xs="6" sm="3">
-        <MudPaper>xs=6 sm=3</MudPaper>
-    </MudItem>
-    <MudItem xs="6" sm="3">
-        <MudPaper>xs=6 sm=3</MudPaper>
-    </MudItem>
-    <MudItem xs="6" sm="3">
-        <MudPaper>xs=6 sm=3</MudPaper>
-    </MudItem>
-</MudGrid>
+   </MudGrid>
 
 <MudGrid>
-    <MudItem xs="12">
-        <MudPaper>xs=12</MudPaper>
+    <MudItem xs="12" sm="6" lg="12">
+        <MudPaper>xs=12 sm=6 lg=12</MudPaper>
     </MudItem>
-    <MudItem xs="12" sm="6">
-        <MudPaper>xs=12 sm=6</MudPaper>
-    </MudItem>
-    <MudItem xs="12" sm="6">
-        <MudPaper>xs=12 sm=6</MudPaper>
-    </MudItem>
-    <MudItem xs="6" sm="3">
-        <MudPaper>xs=6 sm=3</MudPaper>
-    </MudItem>
-    <MudItem xs="6" sm="3">
-        <MudPaper>xs=6 sm=3</MudPaper>
-    </MudItem>
-    <MudItem xs="6" sm="6">
-        <MudPaper>xs=6 sm=6</MudPaper>
-    </MudItem>
-    <MudItem xs="4" sm="7">
-        <MudPaper>xs=4 sm=7</MudPaper>
+    <MudItem xs="12" sm="6" lg="12">
+        <MudPaper>xs=12 sm=6 lg=12</MudPaper>
     </MudItem>
 </MudGrid>
 @code {
