--- a/Client/Components/SlideDeckView.razor
+++ b/Client/Components/SlideDeckView.razor
@@ -2,15 +2,18 @@
 
 <MudGrid>
     <MudItem xs="12" sm="6">
-        <MudContainer MaxWidth="MaxWidth.Small">
+        <MudPaper Elevation="3" Class="pa-2 mx-2">
             <MudText Typo="Typo.h6">@SlideDeck.Title</MudText>
             <MudText Typo="Typo.body1">@SlideDeck.Description</MudText>
-            @if (SlideDeck.Slides != null) {
-                @foreach (var slide in SlideDeck.Slides) {
-                    <Learning.Client.Components.SlideView Slide="slide"></Learning.Client.Components.SlideView>
+        </MudPaper>
+        @if (SlideDeck.Slides != null) {
+            @foreach (var slide in SlideDeck.Slides) {
+            <MudContainer Class="pa-2 mx-2">
+                <Learning.Client.Components.SlideView Slide="slide"></Learning.Client.Components.SlideView>
+            </MudContainer>
                 }
-            }
-        </MudContainer>
+        }
+
     </MudItem>
 </MudGrid>
 @code {
