--- a/Client/Shared/NavMenu.razor
+++ b/Client/Shared/NavMenu.razor
@@ -32,6 +32,11 @@
                 <span class="oi oi-list-rich" aria-hidden="true"></span> List all SlideDecks
             </NavLink>
         </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="addSlideDeckProgram">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Add SlideDeckProgram
+            </NavLink>
+        </li>
     </ul>
 </div>
 
