save slideDeckProgram working from UI

--- a/Client/Pages/Counter.razor
+++ b/Client/Pages/Counter.razor
@@ -13,9 +13,19 @@
         <MudPaper>xs=2</MudPaper>
     </MudItem>
     <MudItem xs="3">
-        <MudPaper>xs=3</MudPaper>
+        <MudGrid Class="blue-grey darken-4 light-green-text text-accent-3">
+            <MudItem xs="1">
+                <MudPaper>xs=1</MudPaper>
+            </MudItem>
+            <MudItem xs="2">
+                <MudPaper>xs=2</MudPaper>
+            </MudItem>
+            <MudItem xs="9">
+                <MudPaper>xs=9</MudPaper>
+            </MudItem>
+        </MudGrid>
     </MudItem>
-   </MudGrid>
+</MudGrid>
 
 <MudGrid>
     <MudItem xs="12" sm="6" lg="12">
