--- a/Client/Shared/NavMenu.razor
+++ b/Client/Shared/NavMenu.razor
@@ -37,6 +37,11 @@
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Add SlideDeckProgram
             </NavLink>
         </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="viewSlideDeckProgram/4">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> View SlideDeckProgram 4
+            </NavLink>
+        </li>
     </ul>
 </div>
 
