list and edit slideDeckProgram additions

--- a/Client/Pages/ViewSlideDeckProgramPage.razor
+++ b/Client/Pages/ViewSlideDeckProgramPage.razor
@@ -42,6 +42,6 @@
 
     public async Task ProgramCompleted(SlideDeckProgram progarm) {
         isCompleted = true;
-        Task.Delay(0);
+        await Task.Delay(0);
     }
 }
