--- a/Client/Shared/NavMenu.razor
+++ b/Client/Shared/NavMenu.razor
@@ -42,6 +42,11 @@
                 <span class="oi oi-list-rich" aria-hidden="true"></span> View SlideDeckProgram 4
             </NavLink>
         </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="listAllSlideDeckProgramsPage">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> List all listAllSlideDeckProgramsPage
+            </NavLink>
+        </li>
     </ul>
 </div>
 
