--- a/Client/Pages/EditSlideDeckProgramPage.razor
+++ b/Client/Pages/EditSlideDeckProgramPage.razor
@@ -5,6 +5,7 @@
 
 @inject Learning.Client.Services.IVideoService VideoService
 @inject Learning.Client.Services.ISlideDeckProgramService SlideDeckProgramService
+@inject Learning.Client.Services.ISlideDeckService SlideDeckService
 @inject IJSRuntime JSRuntime
 @inject ISnackbar Snackbar
 
@@ -12,7 +13,7 @@
     <MudSkeleton SkeletonType="SkeletonType.Rectangle" Width="200px" Height="110px" />
     <MudSkeleton SkeletonType="SkeletonType.Rectangle" Width="200px" Height="110px" />
 } else {
-    <Learning.Client.Components.EditSlideDeckProgram SlideDeckProgram="SlideDeckProgram" OnSave="SaveSlideDeckProgram"></Learning.Client.Components.EditSlideDeckProgram>
+    <Learning.Client.Components.EditSlideDeckProgram SlideDeckProgram="SlideDeckProgram" OnSave="SaveSlideDeckProgram" AvailableSlideDecks="SlideDecksPublished"></Learning.Client.Components.EditSlideDeckProgram>
 
     <MudButton OnClick="TestApa">Tet</MudButton>
 }
@@ -23,6 +24,7 @@
     public string Slug { get; set; }
 
     private SlideDeckProgram SlideDeckProgram = new SlideDeckProgram();
+    List<SlideDeck> SlideDecksPublished;
     private List<Media> Videos;
 
     private bool hasLoaded = false;
@@ -33,6 +35,12 @@
             Videos = r.Data;
         } else {
             Snackbar.Add($"Could not load video source. Error: {r.Message}", Severity.Error);
+        }
+        var rr = await SlideDeckService.GetPublished();
+        if (r.Success) {
+            SlideDecksPublished = rr.Data;
+        } else {
+            Snackbar.Add($"Could not get publushed. Error: {r.Message}", Severity.Error);
         }
 
         if (Id != default(int)) {
