--- a/Client/_Imports.razor
+++ b/Client/_Imports.razor
@@ -13,3 +13,5 @@
 @using Syncfusion.Blazor.RichTextEditor
 @using Blazored.Video
 @using Blazored.Video.Support
+@using Microsoft.AspNetCore.Authorization
+@using Microsoft.AspNetCore.Components.Authorization
