--- a/Client/Pages/Index.razor
+++ b/Client/Pages/Index.razor
@@ -22,6 +22,19 @@ Welcome to your new app.
     </ul>
 }
 
+<AuthorizeView>
+    <Authorized>
+        <h1>Hello, @context.User.Identity.Name!</h1>
+        <p>You can only see this content if you're authorized.</p>
+        
+    </Authorized>
+    <NotAuthorized>
+        <h1>Authentication Failure!</h1>
+        <p>You're not signed in.</p>
+    </NotAuthorized>
+</AuthorizeView>
+
+
 @code {
     private string _authMessage;
     private string _surnameMessage;
