--- a/Client/Shared/NavMenu.razor
+++ b/Client/Shared/NavMenu.razor
@@ -22,31 +22,45 @@
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
             </NavLink>
         </li>
-        <li class="nav-item px-3">
-            <NavLink class="nav-link" href="addSlideDeck">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Add SlideDeck
-            </NavLink>
-        </li>
-        <li class="nav-item px-3">
-            <NavLink class="nav-link" href="listAllSlideDecksPage">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> List all SlideDecks
-            </NavLink>
-        </li>
-        <li class="nav-item px-3">
-            <NavLink class="nav-link" href="addSlideDeckProgram">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Add SlideDeckProgram
-            </NavLink>
-        </li>
-        <li class="nav-item px-3">
-            <NavLink class="nav-link" href="viewSlideDeckProgram/4">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> View SlideDeckProgram 4
-            </NavLink>
-        </li>
-        <li class="nav-item px-3">
-            <NavLink class="nav-link" href="listAllSlideDeckProgramsPage">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> List all listAllSlideDeckProgramsPage
-            </NavLink>
-        </li>
+        <AuthorizeView>
+            <Authorized>
+                >
+                <li class="nav-item px-3">
+                    <NavLink class="nav-link" href="addSlideDeck">
+                        <span class="oi oi-list-rich" aria-hidden="true"></span> Add SlideDeck
+                    </NavLink>
+                </li>
+                <li class="nav-item px-3">
+                    <NavLink class="nav-link" href="listAllSlideDecksPage">
+                        <span class="oi oi-list-rich" aria-hidden="true"></span> List all SlideDecks
+                    </NavLink>
+                </li>
+                <li class="nav-item px-3">
+                    <NavLink class="nav-link" href="addSlideDeckProgram">
+                        <span class="oi oi-list-rich" aria-hidden="true"></span> Add SlideDeckProgram
+                    </NavLink>
+                </li>
+                <li class="nav-item px-3">
+                    <NavLink class="nav-link" href="viewSlideDeckProgram/4">
+                        <span class="oi oi-list-rich" aria-hidden="true"></span> View SlideDeckProgram 4
+                    </NavLink>
+                </li>
+                <li class="nav-item px-3">
+                    <NavLink class="nav-link" href="listAllSlideDeckProgramsPage">
+                        <span class="oi oi-list-rich" aria-hidden="true"></span> List all listAllSlideDeckProgramsPage
+                    </NavLink>
+                </li>
+            </Authorized>
+            <NotAuthorized>
+                <li class="nav-item px-3">
+                    <NavLink class="nav-link" href="userRegistration">
+                        <span class="oi oi-list-rich" aria-hidden="true"></span> userRegistration
+                    </NavLink>
+                </li>
+            </NotAuthorized>
+        </AuthorizeView>
+                
+
     </ul>
 </div>
 
