--- a/Client/Shared/NavMenu.razor
+++ b/Client/Shared/NavMenu.razor
@@ -50,6 +50,12 @@
                         <span class="oi oi-list-rich" aria-hidden="true"></span> List all listAllSlideDeckProgramsPage
                     </NavLink>
                 </li>
+                <li class="nav-item px-3">
+                    <NavLink class="nav-link" href="addUserAvatar">
+                        <span class="oi oi-list-rich" aria-hidden="true"></span> addUserAvatar
+                    </NavLink>
+                </li>
+
             </Authorized>
             <NotAuthorized>
                 <li class="nav-item px-3">
