added compoletedslidedeckprogram actions

--- a/Client/Components/UserAvatarActiveView.razor
+++ b/Client/Components/UserAvatarActiveView.razor
@@ -11,6 +11,7 @@
 
     protected override async Task OnInitializedAsync() {
         UserAvatarLocal.OnChange += ActiveUserAvatarChange;
+        ActiveUserAvatarChange();
         await Task.Delay(0);
     }
     async void ActiveUserAvatarChange() {
