--- a/Client/Shared/MainLayout.razor
+++ b/Client/Shared/MainLayout.razor
@@ -7,6 +7,7 @@
 
     <div class="main">
         <div class="top-row px-4">
+            <Learning.Client.Components.UserAvatarActiveView />
             <a href="http://blazor.net" target="_blank" class="ml-md-auto">About</a>
         </div>
 
